...
    HUBCollectionViewLayout *collectionViewLayout = [[HUBCollectionViewLayout alloc] initWithComponentRegistry:self.componentRegistry
                                                                                        componentLayoutManager:self.componentLayoutManager];

    HUBCollectionView *collectionView = [[HUBCollectionView alloc] initWithFrame:CGRectZero
                                                            collectionViewLayout:collectionViewLayout];
    
    collectionView.accessibilityIdentifier = @"collectionView";
    return collectionView;
}
@end

NS_ASSUME_NONNULL_END

