...
                                                                 actionHandler: nil)
        } else if (HUBViewURIPredicate(viewURI: .todoListViewURI).evaluateViewURI(viewURI)) {
            return hubViewControllerFactory.createViewController(with: defaultConfig,
                                                                 contentOperations: [TodoListContentOperation()],
                                                                 viewURI: viewURI,
                                                                 featureIdentifier: "todoList",
                                                                 featureTitle: "Todo List",
                                                                 actionHandler: nil)
        } else if (HUBViewURIPredicate(viewURI: .prettyPicturesViewURI).evaluateViewURI(viewURI)) {
            return hubViewControllerFactory.createViewController(with: defaultConfig,
                                                                 contentOperations: [PrettyPicturesContentOperation()],
                                                                 viewURI: viewURI,
                                                                 featureIdentifier: "prettyPictures",
                                                                 featureTitle: "Pretty Pictures",
                                                                 actionHandler: PrettyPicturesActionHandler())
        } else if (HUBViewURIPredicate(viewURI: .reallyLongListViewURI).evaluateViewURI(viewURI)) {
            return hubViewControllerFactory.createViewController(with: defaultConfig,
                                                                 contentOperations: [ReallyLongListContentOperation()],
                                                                 viewURI: viewURI,
                                                                 featureIdentifier: "reallyLongList",
...
